--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ title }}</title>
+    <title>Granja Kelel - Huevos de gallinas libres de jaulas</title>
+    <meta
+      name="description"
+      content="Granja Kelel es un emprendimiento familiar que produce huevos de gallinas libres de jaulas."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
